[console] - fixed breadcrumb spacing

--- a/pluto/src/dropdown/Dropdown.css
+++ b/pluto/src/dropdown/Dropdown.css
@@ -43,9 +43,7 @@
         transform: translateY(-25%);
         --pluto-pack-br: 1rem;
         border-radius: 1rem;
-        background: var(--pluto-gray-l0-90);
-        backdrop-filter: blur(3rem);
-        -webkit-backdrop-filter: blur(3rem);
+        background: var(--pluto-gray-l0);
         overflow: hidden;
         max-width: calc(100vw - 5rem);
     }
